<resources>
    <string name="app_name">My Vocab</string>
    <string name="memorized">memorized</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="show">show</string>
    <string name="lang1_word">lang 1 word …</string>
    <string name="lang2word">lang 2 word</string>
    <string name="list">list</string>
    <string name="title_activity_list">List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="shuffle">shuffle</string>
    <string name="show_memorized_word">Show memorized word</string>
    <string name="filter">filter</string>
    <string name="read">read</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">login</string>
    <string name="content_description_add_new_word">Add new word</string>
    <string name="settings">settings</string>
    <string name="change">change</string>
    <string name="back_up">back up</string>
    <string name="restore">restore</string>
</resources>