<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="@+id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_add"
            app:layout_constraintTop_toTopOf="@+id/button_add" />

        <EditText
            android:id="@+id/editTextSecondLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="second language word"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFirstLanguage"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextFirstLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="first language word"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_ok"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSecondLanguage"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/button_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_ok"
            app:layout_constraintTop_toTopOf="@+id/button_ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>